add dashboard, and report module
